--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="images/Group 4 (1).png">
                 
                  <div class="p">
-                    <p>@ui.ruman</p>
+                    <p>@ui.kazi</p>
                  </div>
             </div>
 
